Full CRUD for festival and stream
